# proton-server

./: .gitignore  CMakeLists.txt  README.md  proton.conf
build-headless/: CMakeCache.txt  Makefile  cmake_install.cmake  hexapod_sim
cmake/: mingw-w64-x86_64.cmake
scripts/: install_raspbian.sh
src/: config.cpp  config.h  control.cpp  control.h  gaits.h  input.cpp  input.h  input_headless.cpp  kinematics.h  main.cpp  mdns_responder.cpp  mdns_responder.h  options.cpp  options.h  raylib_compat.h  raylib_headless.h  robot_params.h  servo.cpp  servo.h  types.h  visual.cpp  visual.h  wifi_controller.cpp  wifi_controller.h
